seeing if can correct gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,12 +38,12 @@ h2{
 p{
   color: black;
   text-align: left;
-  grid-column: 1;
+  grid-column: 1/2;
 }
 .p{
   color: black;
   text-align: right;
-  grid-column: 2;
+  grid-column: 2/3;
 }
 figure img{
   border-radius: 50px;
